Adicionado link para o canal na página inicial

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
     <body>
         <div>
             <h1>Em construção</h1>
-            <p>O Desenhando com Mack em breve estará de cara nova!</p><br><br>
+            <p>O Desenhando com Mack em breve estará de cara nova!</p>
+            <p>Enquanto isso, conheça o canal: <a href="https://www.youtube.com/desenhandocommack">youtube.com/desenhandocommack</a></p>
+            <br><br>
             <img src="em-contrucao.jpg" alt="Em contrução">
         </div>
     </body>
