Foi definido a estrutura basica do site

--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -1,6 +1,8 @@
 ---
-layout: page
+layout: default
 permalink: /blog/
+h1: blog
+h2: Conteúdo exclusivo e complementar. Fique a vontade para explorar
 ---
 
 LISTA DE POSTAGENS
