--- a/index.html
+++ b/index.html
@@ -2,4 +2,26 @@
 layout: default
 ---
 
-PÁGINA INICIAL
+<div class="section section1">
+  <h1>O PROJETO</h1>
+
+  <p>Desenhando com Mack é a minha trajetória como artista. Uma jornada aberta  e compartilhada com qualquer outro aprendiz que também está em busca de trilhar a sua por esse universo infinito das artes.</p>
+
+  <p>Com esse projeto eu me mantenho motivada a vencer os obstáculos que surgem, aprendo com os erros, divido experiências e conheço novos aprendizes pelo caminho.</p>
+
+  <p>Tudo aqui é literalmente de aprendiz para aprendiz, e estou nessa jornada assim como você que está iniciando. O canal é a minha forma de exercitar, fuçar, experimentar e registrar todo o meu progresso e as coisas que vou descobrindo. E aproveito isso para também compartilhar do meu jeito, com cada um de vocês, que eu apelido carinhosamente de Aprendizes.</p>
+</div>
+
+
+<div class="section section2">
+  <h1>JUNTE-SE A TRILHA</h1>
+
+  <p>E aí Aprendiz, tua jornada também está meio solitária? Junte-se a trilha! Vamos ganhar XP, desbravar e vencer cada BOSS!!!</p>
+</div>
+
+<div class="section section3">
+  <a href="#"><img src="/assets/img/icon-youtube-off.png" alt=""></a>
+  <a href="#"><img src="/assets/img/icon-facebook-off.png" alt=""></a>
+  <a href="#"><img src="/assets/img/icon-instagram-off.png" alt=""></a>
+  <a href="#"><img src="/assets/img/icon-twitter-off.png" alt=""></a>
+</div>
