foram realizadas várias mudanças, incluindo a adicão do SDK do Facebook para compartilhamento

--- a/index.html
+++ b/index.html
@@ -3,26 +3,41 @@ layout: default
 ---
 
 <div class="section-wrapper-1">
-<div class="section section1">
-  <h1>O PROJETO</h1>
-  <p>Desenhando com Mack é a minha trajetória como artista. Uma jornada aberta  e compartilhada com qualquer outro aprendiz que também está em busca de trilhar a sua por esse universo infinito das artes.</p>
-  <p>Com esse projeto eu me mantenho motivada a vencer os obstáculos que surgem, aprendo com os erros, divido experiências e conheço novos aprendizes pelo caminho.</p>
-  <p>Tudo aqui é literalmente de aprendiz para aprendiz, e estou nessa jornada assim como você que está iniciando. O canal é a minha forma de exercitar, fuçar, experimentar e registrar todo o meu progresso e as coisas que vou descobrindo. E aproveito isso para também compartilhar do meu jeito, com cada um de vocês, que eu apelido carinhosamente de Aprendizes.</p>
-</div>
+  <div class="section section1">
+    <h1>O PROJETO</h1>
+    <p>Desenhando com Mack é a minha trajetória como artista. Uma jornada aberta  e compartilhada com qualquer outro aprendiz que também está em busca de trilhar a sua por esse universo infinito das artes.</p>
+    <p>Com esse projeto eu me mantenho motivada a vencer os obstáculos que surgem, aprendo com os erros, divido experiências e conheço novos aprendizes pelo caminho.</p>
+    <p>Tudo aqui é literalmente de aprendiz para aprendiz, e estou nessa jornada assim como você que está iniciando. O canal é a minha forma de exercitar, fuçar, experimentar e registrar todo o meu progresso e as coisas que vou descobrindo. E aproveito isso para também compartilhar do meu jeito, com cada um de vocês, que eu apelido carinhosamente de Aprendizes.</p>
+  </div>
 </div>
 
 <div class="section-wrapper-2">
-<div class="section section2">
-  <h1>JUNTE-SE A TRILHA</h1>
-  <p>E aí Aprendiz, tua jornada também está meio solitária? Junte-se a trilha! Vamos ganhar XP, desbravar e vencer cada BOSS!!!</p>
-</div>
+  <div class="section section2">
+    <h1>NOSSOS APLICATIVOS</h1>
+    <p>Pensamos e estamos projetando aplicativos para complementar o projeto Desenhando com Mack. E atualmente contamos com esse primeiro de mesa de luz totalmente gratuito.</p>
+    <img class="app-icon" src="assets/img/app-icon.png" alt="Logo do aplicativo Mesa de Luz">
+    <h2>MESA DE LUZ</h2>
+    <p>por Desenhando com Mack</p>
+    <a target='_blank' href='https://play.google.com/store/apps/details?id=com.desenhandocommack.mesadeluz&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img width='200' alt='Disponível no Google Play' src='https://play.google.com/intl/pt-BR/badges/images/generic/pt-br_badge_web_generic.png'/></a>
+  </div>
 </div>
 
 <div class="section-wrapper-3">
-<div class="section section3">
-  <a href="#"><img src="/assets/img/icon-youtube-off.png" alt=""></a>
-  <a href="#"><img src="/assets/img/icon-facebook-off.png" alt=""></a>
-  <a href="#"><img src="/assets/img/icon-instagram-off.png" alt=""></a>
-  <a href="#"><img src="/assets/img/icon-twitter-off.png" alt=""></a>
+  <div class="section section3">
+    <h1>JUNTE-SE A TRILHA</h1>
+    <p>E aí Aprendiz, tua jornada também está meio solitária? Junte-se a trilha! Vamos ganhar XP, desbravar e vencer cada BOSS!!!</p>
+  </div>
 </div>
+
+<div class="section-wrapper-4">
+  <div class="section section4">
+    <h1>NOSSAS REDES SOCIAIS</h1>
+
+    <div>
+      <a href="#"><img src="/assets/img/icon-youtube-off.png" alt=""></a>
+      <a href="#"><img src="/assets/img/icon-facebook-off.png" alt=""></a>
+      <a href="#"><img src="/assets/img/icon-instagram-off.png" alt=""></a>
+      <a href="#"><img src="/assets/img/icon-twitter-off.png" alt=""></a>
+    </div
+  </div>
 </div>
