mudei o nome da página FAQ

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ layout: default
     <h1>NOSSAS REDES SOCIAIS</h1>
 
     <div>
-      <a target="_blank" href="//youtube.com/desenhandocommack"><img src="/assets/img/icon-youtube-off.png" alt=""></a>
-      <a target="_blank" href="//facebook.com/desenhandocommack"><img src="/assets/img/icon-facebook-off.png" alt=""></a>
-      <a target="_blank" href="//instagram.com/desenhandocommack"><img src="/assets/img/icon-instagram-off.png" alt=""></a>
-      <a target="_blank" href="//twitter.com/mackdesenhos"><img src="/assets/img/icon-twitter-off.png" alt=""></a>
+      <a target="_blank" href="//{{ site.contact.youtube }}"><img src="/assets/img/icon-youtube-off.png" alt=""></a>
+      <a target="_blank" href="//{{ site.contact.facebook }}"><img src="/assets/img/icon-facebook-off.png" alt=""></a>
+      <a target="_blank" href="//{{ site.contact.instagram }}"><img src="/assets/img/icon-instagram-off.png" alt=""></a>
+      <a target="_blank" href="//{{ site.contact.twitter }}"><img src="/assets/img/icon-twitter-off.png" alt=""></a>
     </div
   </div>
 </div>
