--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ layout: default
     <p>Desenhando com Mack é a minha trajetória como artista. Uma jornada aberta  e compartilhada com qualquer outro aprendiz que também está em busca de trilhar a sua por esse universo infinito das artes.</p>
     <p>Com esse projeto eu me mantenho motivada a vencer os obstáculos que surgem, aprendo com os erros, divido experiências e conheço novos aprendizes pelo caminho.</p>
     <p>Tudo aqui é literalmente de aprendiz para aprendiz, e estou nessa jornada assim como você que está iniciando. O canal é a minha forma de exercitar, fuçar, experimentar e registrar todo o meu progresso e as coisas que vou descobrindo. E aproveito isso para também compartilhar do meu jeito, com cada um de vocês, que eu apelido carinhosamente de Aprendizes.</p>
+    
+    <a class="link-to-blog" href="/blog/">Acesse o blog</a>
   </div>
 </div>
 
@@ -18,7 +20,10 @@ layout: default
     <img class="app-icon" src="assets/img/app-icon.png" alt="Logo do aplicativo Mesa de Luz">
     <h2>MESA DE LUZ</h2>
     <p>por Desenhando com Mack</p>
-    <a target='_blank' href='https://play.google.com/store/apps/details?id=com.desenhandocommack.mesadeluz&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img width='200' alt='Disponível no Google Play' src='https://play.google.com/intl/pt-BR/badges/images/generic/pt-br_badge_web_generic.png'/></a>
+    <a target='_blank' href='https://play.google.com/store/apps/details?id=com.desenhandocommack.mesadeluz&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+      <!-- <img width='200' alt='Disponível no Google Play' src='https://play.google.com/intl/pt-BR/badges/images/generic/pt-br_badge_web_generic.png'/> -->
+      <img width='200' alt='Disponível no Google Play' src='/assets/img/badge-googleplay.png'/>
+    </a>
   </div>
 </div>
 
@@ -31,13 +36,9 @@ layout: default
 
 <div class="section-wrapper-4">
   <div class="section section4">
-    <h1>NOSSAS REDES SOCIAIS</h1>
-
-    <div>
-      <a target="_blank" href="//{{ site.contact.youtube }}"><img src="/assets/img/icon-youtube-off.png" alt=""></a>
-      <a target="_blank" href="//{{ site.contact.facebook }}"><img src="/assets/img/icon-facebook-off.png" alt=""></a>
-      <a target="_blank" href="//{{ site.contact.instagram }}"><img src="/assets/img/icon-instagram-off.png" alt=""></a>
-      <a target="_blank" href="//{{ site.contact.twitter }}"><img src="/assets/img/icon-twitter-off.png" alt=""></a>
-    </div
+    <a target="_blank" href="//{{ site.contact.youtube }}"><img src="/assets/img/icon-youtube-off.png" alt=""></a>
+    <a target="_blank" href="//{{ site.contact.facebook }}"><img src="/assets/img/icon-facebook-off.png" alt=""></a>
+    <a target="_blank" href="//{{ site.contact.instagram }}"><img src="/assets/img/icon-instagram-off.png" alt=""></a>
+    <a target="_blank" href="//{{ site.contact.twitter }}"><img src="/assets/img/icon-twitter-off.png" alt=""></a>
   </div>
 </div>
