--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
   <div class="section section2">
     <h1>NOSSOS APLICATIVOS</h1>
     <p>Pensamos e estamos projetando aplicativos para complementar o projeto Desenhando com Mack. E atualmente contamos com esse primeiro de mesa de luz totalmente gratuito.</p>
-    <img class="app-icon" src="assets/img/app-icon.png" alt="Logo do aplicativo Mesa de Luz">
+    <img class="app-icon" src="/assets/img/app-icon.png" alt="Logo do aplicativo Mesa de Luz">
     <h2>MESA DE LUZ</h2>
     <p>por Desenhando com Mack</p>
     <a target='_blank' href='https://play.google.com/store/apps/details?id=com.desenhandocommack.mesadeluz&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
@@ -36,9 +36,9 @@ layout: default
 
 <div class="section-wrapper-4">
   <div class="section section4">
-    <a target="_blank" href="//{{ site.contact.youtube }}"><img src="/assets/img/icon-youtube-off.png" alt=""></a>
-    <a target="_blank" href="//{{ site.contact.facebook }}"><img src="/assets/img/icon-facebook-off.png" alt=""></a>
-    <a target="_blank" href="//{{ site.contact.instagram }}"><img src="/assets/img/icon-instagram-off.png" alt=""></a>
-    <a target="_blank" href="//{{ site.contact.twitter }}"><img src="/assets/img/icon-twitter-off.png" alt=""></a>
+    <a class="youtube" target="_blank" href="//{{ site.contact.youtube }}">YouTube</a>
+    <a class="facebook" target="_blank" href="//{{ site.contact.facebook }}">Facebook</a>
+    <a class="instagram" target="_blank" href="//{{ site.contact.instagram }}">Instagram</a>
+    <a class="twitter" target="_blank" href="//{{ site.contact.twitter }}">Twitter</a>
   </div>
 </div>
