--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
 <div class="section-wrapper-2">
   <div class="section section2">
     <h1>NOSSOS APLICATIVOS</h1>
-    <p>Pensamos e estamos projetando aplicativos para complementar o projeto Desenhando com Mack. E atualmente contamos com esse primeiro de mesa de luz totalmente gratuito.</p>
+    <p>Pensamos e estamos projetando aplicativos para complementar o projeto Desenhando com Mack, e atualmente contamos com esse primeiro de mesa de luz totalmente gratuito.</p>
     <img class="app-icon" src="/assets/img/app-icon.png" alt="Logo do aplicativo Mesa de Luz">
     <h2>MESA DE LUZ</h2>
     <p>por Desenhando com Mack</p>
