Add title to social links

--- a/index.html
+++ b/index.html
@@ -70,13 +70,25 @@ layout: default
 <div id="contato" class="section-wrapper-4">
   <a data-scroll href="#contato"></a>
   <div class="section section4">
-    <a class="youtube" target="_blank" href="//{{ site.contact.youtube }}"
+    <a
+      class="youtube"
+      title="YouTube"
+      target="_blank"
+      href="//{{ site.contact.youtube }}"
       >YouTube</a
     >
-    <a class="instagram" target="_blank" href="//{{ site.contact.instagram }}"
+    <a
+      class="instagram"
+      title="Instagram"
+      target="_blank"
+      href="//{{ site.contact.instagram }}"
       >Instagram</a
     >
-    <a class="twitter" target="_blank" href="//{{ site.contact.twitch }}"
+    <a
+      class="twitch"
+      title="Twitch"
+      target="_blank"
+      href="//{{ site.contact.twitch }}"
       >Twitch</a
     >
   </div>
